--- a/SDZ_custom/icon/DEVS.ipynb
+++ b/SDZ_custom/icon/DEVS.ipynb
@@ -55,10 +55,9 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "clear_output()\n",
-        "print('\u001b[1;96mDrive Conected ✓')"
+        "print('\u001b[1;96mDrive Connected ✓')"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "Nvu5CX83Jdoa"
       },
       "execution_count": null,
@@ -302,9 +301,9 @@
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
         "if SDZ_Version == \"V1.5\":\n",
-        "  !python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half\n",
+        "  !python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae\n",
         "elif SDZ_Version == \"V2.1-768\":\n",
-        "  !python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half\n"
+        "  !python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --medvram\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -320,6 +319,97 @@
       ],
       "metadata": {
         "id": "J0o6_YkInFCP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "import os\n",
+        "import shutil\n",
+        "from IPython.utils import capture\n",
+        "from IPython.display import clear_output\n",
+        "import sys\n",
+        "import fileinput\n",
+        "\n",
+        "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "SDZ_Version = \"V2.1-768\" #@param [\"V1.5\", \"V2.1-768\"]\n",
+        "Download_Base_Model = \"V2.1-768\" #@param [\"\", \"V1.5\", \"V2.1-768\"]\n",
+        "SDZ = \"stable-diffusion-webui\"\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "gitclo = \"git clone --depth 1\" \n",
+        "os.chdir(SDZ_install)\n",
+        "\n",
+        "model_init = \"\" #@param {type:\"string\"}\n",
+        "models_dir = \"\" #@param {type:\"string\"}\n",
+        "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "\n",
+        "  if os.path.exists(SDZ):\n",
+        "    shutil.rmtree(SDZ)\n",
+        "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  if not os.path.exists(SDZ):\n",
+        "    !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
+        "\n",
+        "  if Download_Base_Model == \"V1.5\":\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\n",
+        "\n",
+        "  elif Download_Base_Model == \"V2.1-768\":\n",
+        "    !wget https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml -O v21.yaml\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "\n",
+        "  else:\n",
+        "    Download_Base_Model == \"\"\n",
+        "  %cd ..\n",
+        "  %cd ..\n",
+        "  %cd stable-diffusion-webui\n",
+        "\n",
+        "  clear_output()\n",
+        "print('\u001b[1;90mInstalling SDZ Xformers ✓')\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "  if SDZ_Dreambooth:\n",
+        "    !wget https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "    !bash ./py310.sh -b -f -p /usr/local\n",
+        "    !python -m ipykernel install --name \"py310\" --user\n",
+        "    !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "\n",
+        "  clear_output()\n",
+        "print('\u001b[1;96mInstalling SDZ with Extentions ✓')\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "  else:\n",
+        "    # Install style - config\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
+        "    !wget https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "\n",
+        "    # Install Extensions\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "\n",
+        "    os.chdir(SDZ_install+\"/\"+SDZ)\n",
+        "\n",
+        "  clear_output()\n",
+        "print('\u001b[1;90mPreparing SDZ System ✓')\n",
+        "\n",
+        "if SDZ_Version == \"V1.5\":\n",
+        "  !python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half\n",
+        "elif SDZ_Version == \"V2.1-768\":\n",
+        "  !python launch.py --share --api --force-enable-xformers --config=\"/models/Stable-diffusion/v21.yaml\" --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "al13zRuURj32"
       },
       "execution_count": null,
       "outputs": []
