--- a/SDZ_custom/icon/DEVS.ipynb
+++ b/SDZ_custom/icon/DEVS.ipynb
@@ -413,6 +413,98 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/>v5</center>\n",
+        "import os\n",
+        "import shutil\n",
+        "from IPython.utils import capture\n",
+        "from IPython.display import clear_output\n",
+        "import sys\n",
+        "import fileinput\n",
+        "\n",
+        "SDZ_install = \"/content/drive/Shareddrives/Data13/zdream/MyDrive/sdz\" #@param {type:\"string\"}\n",
+        "SDZ_Version = \"V2.1\" #@param [\"V1.5\", \"V2.1\"]\n",
+        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
+        "SDZ = \"stable-diffusion-webui\"\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "gitclo = \"git clone --depth 1\" \n",
+        "os.chdir(SDZ_install)\n",
+        "\n",
+        "model_init = \"/content/drive/Shareddrives/Data13/ModelzZz/modelz_base/Zv2-1_768-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "models_dir = \"\" #@param {type:\"string\"}\n",
+        "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "\n",
+        "  if os.path.exists(SDZ):\n",
+        "    shutil.rmtree(SDZ)\n",
+        "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  if not os.path.exists(SDZ):\n",
+        "    !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
+        "  !wget https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml -O v21.yaml\n",
+        "\n",
+        "  if Download_Base_Model == \"V1.5\":\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "\n",
+        "  elif Download_Base_Model == \"V2.1\":\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "\n",
+        "  else:\n",
+        "    Download_Base_Model == \"\"\n",
+        "  %cd ..\n",
+        "  %cd ..\n",
+        "  %cd stable-diffusion-webui\n",
+        "\n",
+        "  clear_output()\n",
+        "print('\u001b[1;96mInstalling SDZ ✓')\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "  if SDZ_Dreambooth:\n",
+        "    !wget https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "    !bash ./py310.sh -b -f -p /usr/local\n",
+        "    !python -m ipykernel install --name \"py310\" --user\n",
+        "    !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "\n",
+        "    # Install Extensions \n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    \n",
+        "\n",
+        "  else:\n",
+        "    # Install style - config\n",
+        "\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
+        "    !wget https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "\n",
+        "    # Install Extensions\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "\n",
+        "\n",
+        "    os.chdir(SDZ_install+\"/\"+SDZ)\n",
+        "\n",
+        "  clear_output()\n",
+        "print('\u001b[1;90mPreparing SDZ System ✓')\n",
+        "\n",
+        "if SDZ_Version == \"V1.5\":\n",
+        "  !python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half\n",
+        "elif SDZ_Version == \"V2.1\":\n",
+        "  !python launch.py --share --api --force-enable-xformers --config=\"/models/Stable-diffusion/v21.yaml\" --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half\n"
+      ],
+      "metadata": {
+        "id": "F3tNIx8LWZkV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
