--- a/SDZ_custom/icon/DEVS.ipynb
+++ b/SDZ_custom/icon/DEVS.ipynb
@@ -67,6 +67,8 @@
     {
       "cell_type": "code",
       "source": [
+        "Puedes simplificar este código de python\n",
+        "\n",
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/>v13i</center>\n",
         "import os\n",
         "import shutil\n",
@@ -76,17 +78,17 @@
         "import fileinput\n",
         "\n",
         "SDZ_install = \"/content/drive/Shareddrives/Data13/zdream/MyDrive/sdz\" #@param {type:\"string\"}\n",
-        "SDZ_Version = \"V2.1\" #@param [\"V1.5\", \"V2.1\"]\n",
+        "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
         "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
         "SDZconfig=\"--config v2-inference-v.yaml\"\n",
-        "model_init = \"/content/drive/Shareddrives/Data13/zdream/MyDrive/zmarluzz2_2028.ckpt\" #@param {type:\"string\"}\n",
-        "models_dir = \"/content/drive/Shareddrives/Data13/zdream/MyDrive/sdz\" #@param {type:\"string\"}\n",
+        "model_init = \"/content/drive/Shareddrives/Data13/ModelzZz/modelz3/zaumarzz2_2.ckpt\" #@param {type:\"string\"}\n",
+        "models_dir = \"/content/drive/Shareddrives/Data13/ModelzZz/modelz3\" #@param {type:\"string\"}\n",
         "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
-        "SDZ_Parameterization_V = True #@param {type:\"boolean\"}\n",
+        "SDZ_Parameterization_V = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Model= False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = True #@param {type:\"boolean\"}\n",
         "\n",
