--- a/SDZ_custom/icon/DEVS.ipynb
+++ b/SDZ_custom/icon/DEVS.ipynb
@@ -67,8 +67,6 @@
     {
       "cell_type": "code",
       "source": [
-        "Puedes simplificar este código de python\n",
-        "\n",
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/>v13i</center>\n",
         "import os\n",
         "import shutil\n",
@@ -77,20 +75,20 @@
         "import sys\n",
         "import fileinput\n",
         "\n",
-        "SDZ_install = \"/content/drive/Shareddrives/Data13/zdream/MyDrive/sdz\" #@param {type:\"string\"}\n",
+        "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
+        "Download_Base_Model = \"V1.5\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
         "SDZconfig=\"--config v2-inference-v.yaml\"\n",
-        "model_init = \"/content/drive/Shareddrives/Data13/ModelzZz/modelz3/zaumarzz2_2.ckpt\" #@param {type:\"string\"}\n",
-        "models_dir = \"/content/drive/Shareddrives/Data13/ModelzZz/modelz3\" #@param {type:\"string\"}\n",
+        "model_init = \"\" #@param {type:\"string\"}\n",
+        "models_dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
         "SDZ_Parameterization_V = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Model= False #@param {type:\"boolean\"}\n",
-        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "\n",
         "if SDZ_Big_Model:\n",
         "  !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
@@ -114,13 +112,13 @@
         "    #!wget https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
         "\n",
-        "    %cd stable-diffusion-webui/models/Stable-diffusion\n",
+        "    %cd models/Stable-diffusion\n",
         "\n",
         "    if Download_Base_Model == \"V1.5\":\n",
-        "      !wget -N https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
         "\n",
         "    elif Download_Base_Model == \"V2.1\":\n",
-        "      !wget -N https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
         "     \n",
         "    else:\n",
         "      Download_Base_Model == \"\"\n",
@@ -218,11 +216,46 @@
         "          !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle \n"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "_fAlw7JHVYAI"
+        "id": "_fAlw7JHVYAI",
+        "outputId": "e9e017aa-6b95-4b6e-e19d-1264b23ebebd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1;96mInstalling SDZ ✓\n",
+            "\u001b[1;90mPreparing SDZ System ✓\n",
+            "Python 3.8.16 (default, Dec  7 2022, 01:12:13) \n",
+            "[GCC 7.5.0]\n",
+            "Commit hash: 685f9631b56ff8bd43bce24ff5ce0f9a0e9af490\n",
+            "Installing gfpgan\n",
+            "Traceback (most recent call last):\n",
+            "  File \"launch.py\", line 294, in <module>\n",
+            "    prepare_environment()\n",
+            "  File \"launch.py\", line 212, in prepare_environment\n",
+            "    run_pip(f\"install {gfpgan_package}\", \"gfpgan\")\n",
+            "  File \"launch.py\", line 78, in run_pip\n",
+            "    return run(f'\"{python}\" -m pip {args} --prefer-binary{index_url_line}', desc=f\"Installing {desc}\", errdesc=f\"Couldn't install {desc}\")\n",
+            "  File \"launch.py\", line 39, in run\n",
+            "    result = subprocess.run(command, stdout=subprocess.PIPE, stderr=subprocess.PIPE, shell=True, env=os.environ if custom_env is None else custom_env)\n",
+            "  File \"/usr/lib/python3.8/subprocess.py\", line 495, in run\n",
+            "    stdout, stderr = process.communicate(input, timeout=timeout)\n",
+            "  File \"/usr/lib/python3.8/subprocess.py\", line 1028, in communicate\n",
+            "    stdout, stderr = self._communicate(input, endtime, timeout)\n",
+            "  File \"/usr/lib/python3.8/subprocess.py\", line 1868, in _communicate\n",
+            "    ready = selector.select(timeout)\n",
+            "  File \"/usr/lib/python3.8/selectors.py\", line 415, in select\n",
+            "    fd_event_list = self._selector.poll(timeout)\n",
+            "KeyboardInterrupt\n",
+            "^C\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
