--- a/SDZ_custom/icon/DEVS.ipynb
+++ b/SDZ_custom/icon/DEVS.ipynb
@@ -76,8 +76,8 @@
         "import fileinput\n",
         "\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "Download_Base_Model = \"V1.5\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
+        "SDZ_Version = \"V2.1\" #@param [\"V1.5\", \"V2.1\"]\n",
+        "Download_Base_Model = \"V2.1\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "gitclo = \"git clone --depth 1\" \n",
@@ -115,10 +115,10 @@
         "    %cd models/Stable-diffusion\n",
         "\n",
         "    if Download_Base_Model == \"V1.5\":\n",
-        "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "      !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
         "\n",
         "    elif Download_Base_Model == \"V2.1\":\n",
-        "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "      !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
         "     \n",
         "    else:\n",
         "      Download_Base_Model == \"\"\n",
@@ -211,18 +211,19 @@
         "        clear_output()\n",
         "        print('\u001b[1;90mPreparing SDZ System Continue ✓')\n",
         "        if SDZ_Version == \"V1.5\":\n",
-        "          !python launch.py --share --api --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle \n",
+        "          !python launch.py --share --api --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n",
         "        elif SDZ_Version == \"V2.1\":\n",
-        "          !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle \n"
+        "          !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "_fAlw7JHVYAI",
-        "outputId": "e9e017aa-6b95-4b6e-e19d-1264b23ebebd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3cd5d9d8-e98d-4ff9-df53-84f2c95f30f7"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,26 +234,72 @@
             "Python 3.8.16 (default, Dec  7 2022, 01:12:13) \n",
             "[GCC 7.5.0]\n",
             "Commit hash: 685f9631b56ff8bd43bce24ff5ce0f9a0e9af490\n",
-            "Installing gfpgan\n",
-            "Traceback (most recent call last):\n",
-            "  File \"launch.py\", line 294, in <module>\n",
-            "    prepare_environment()\n",
-            "  File \"launch.py\", line 212, in prepare_environment\n",
-            "    run_pip(f\"install {gfpgan_package}\", \"gfpgan\")\n",
-            "  File \"launch.py\", line 78, in run_pip\n",
-            "    return run(f'\"{python}\" -m pip {args} --prefer-binary{index_url_line}', desc=f\"Installing {desc}\", errdesc=f\"Couldn't install {desc}\")\n",
-            "  File \"launch.py\", line 39, in run\n",
-            "    result = subprocess.run(command, stdout=subprocess.PIPE, stderr=subprocess.PIPE, shell=True, env=os.environ if custom_env is None else custom_env)\n",
-            "  File \"/usr/lib/python3.8/subprocess.py\", line 495, in run\n",
-            "    stdout, stderr = process.communicate(input, timeout=timeout)\n",
-            "  File \"/usr/lib/python3.8/subprocess.py\", line 1028, in communicate\n",
-            "    stdout, stderr = self._communicate(input, endtime, timeout)\n",
-            "  File \"/usr/lib/python3.8/subprocess.py\", line 1868, in _communicate\n",
-            "    ready = selector.select(timeout)\n",
-            "  File \"/usr/lib/python3.8/selectors.py\", line 415, in select\n",
-            "    fd_event_list = self._selector.poll(timeout)\n",
-            "KeyboardInterrupt\n",
-            "^C\n"
+            "Cloning Stable Diffusion into repositories/stable-diffusion-stability-ai...\n",
+            "Cloning Taming Transformers into repositories/taming-transformers...\n",
+            "Cloning K-diffusion into repositories/k-diffusion...\n",
+            "Cloning CodeFormer into repositories/CodeFormer...\n",
+            "Cloning BLIP into repositories/BLIP...\n",
+            "Installing requirements for Web UI\n",
+            "Launching Web UI with arguments: --share --api --config v2-inference-v.yaml --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir= --ckpt= --theme=dark --disable-safe-unpickle --no-half-vae\n",
+            "Checkpoint in --ckpt argument not found (Possible it was moved to /content/sample_data/stable-diffusion-webui/models/Stable-diffusion: \n",
+            "Checkpoint v1-5-fp16.ckpt [a2a802b2] not found; loading fallback content/sample_data/stable-diffusion-webui/models/Stable-diffusion/v21.ckpt [6bccbcc6]\n",
+            "LatentDiffusion: Running in v-prediction mode\n",
+            "DiffusionWrapper has 865.91 M params.\n",
+            "Downloading: 100% 3.94G/3.94G [01:01<00:00, 64.2MB/s]\n",
+            "Loading weights [6bccbcc6] from /content/sample_data/stable-diffusion-webui/models/Stable-diffusion/v21.ckpt\n",
+            "Applying xformers cross attention optimization.\n",
+            "Model loaded.\n",
+            "Checkpoint v1-5-fp16.ckpt [a2a802b2] not found; loading fallback content/sample_data/stable-diffusion-webui/models/Stable-diffusion/v21.ckpt [6bccbcc6]\n",
+            "Loaded a total of 0 textual inversion embeddings.\n",
+            "Embeddings: \n",
+            "Running on local URL:  http://127.0.0.1:7860\n",
+            "Running on public URL: https://9ee45c247be11e02.gradio.app\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades (NEW!), check out Spaces: https://huggingface.co/spaces\n",
+            "  0% 0/20 [00:00<?, ?it/s]\n",
+            "  5% 1/20 [00:06<02:09,  6.82s/it]\n",
+            " 15% 3/20 [00:07<00:28,  1.66s/it]\n",
+            " 20% 4/20 [00:07<00:17,  1.07s/it]\n",
+            " 25% 5/20 [00:07<00:11,  1.34it/s]\n",
+            " 30% 6/20 [00:07<00:07,  1.82it/s]\n",
+            " 35% 7/20 [00:07<00:05,  2.36it/s]\n",
+            " 40% 8/20 [00:07<00:04,  2.92it/s]\n",
+            " 45% 9/20 [00:08<00:03,  3.48it/s]\n",
+            " 50% 10/20 [00:08<00:02,  3.98it/s]\n",
+            " 55% 11/20 [00:08<00:02,  4.41it/s]\n",
+            " 60% 12/20 [00:08<00:01,  4.79it/s]\n",
+            " 65% 13/20 [00:08<00:01,  5.07it/s]\n",
+            " 70% 14/20 [00:09<00:01,  5.32it/s]\n",
+            " 75% 15/20 [00:09<00:00,  5.50it/s]\n",
+            " 80% 16/20 [00:09<00:00,  5.61it/s]\n",
+            " 85% 17/20 [00:09<00:00,  5.68it/s]\n",
+            " 90% 18/20 [00:09<00:00,  5.77it/s]\n",
+            " 95% 19/20 [00:09<00:00,  5.80it/s]\n",
+            "100% 20/20 [00:10<00:00,  1.99it/s]\n",
+            "Total progress: 100% 20/20 [00:07<00:00,  2.69it/s]\n",
+            "  0% 0/20 [00:00<?, ?it/s]\n",
+            "  5% 1/20 [00:08<02:50,  8.99s/it]\n",
+            " 10% 2/20 [00:10<01:18,  4.36s/it]\n",
+            " 15% 3/20 [00:11<00:49,  2.89s/it]\n",
+            " 20% 4/20 [00:12<00:35,  2.22s/it]\n",
+            " 25% 5/20 [00:13<00:27,  1.83s/it]\n",
+            " 30% 6/20 [00:14<00:22,  1.60s/it]\n",
+            " 35% 7/20 [00:15<00:18,  1.45s/it]\n",
+            " 40% 8/20 [00:17<00:16,  1.35s/it]\n",
+            " 45% 9/20 [00:18<00:14,  1.29s/it]\n",
+            " 50% 10/20 [00:19<00:12,  1.25s/it]\n",
+            " 55% 11/20 [00:20<00:10,  1.22s/it]\n",
+            " 60% 12/20 [00:21<00:09,  1.20s/it]\n",
+            " 65% 13/20 [00:22<00:08,  1.19s/it]\n",
+            " 70% 14/20 [00:23<00:07,  1.18s/it]\n",
+            " 75% 15/20 [00:25<00:05,  1.17s/it]\n",
+            " 80% 16/20 [00:26<00:04,  1.17s/it]\n",
+            " 85% 17/20 [00:27<00:03,  1.16s/it]\n",
+            " 90% 18/20 [00:28<00:02,  1.16s/it]\n",
+            " 95% 19/20 [00:29<00:01,  1.16s/it]\n",
+            "100% 20/20 [00:30<00:00,  1.54s/it]\n",
+            "Total progress: 100% 20/20 [00:34<00:00,  1.73s/it]\n",
+            "Interrupted with signal 2 in <frame at 0xc8ae8690, file '/content/sample_data/stable-diffusion-webui/webui.py', line 85, code sigint_handler>\n"
           ]
         }
       ]
@@ -545,7 +592,8 @@
         "          !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle \n"
       ],
       "metadata": {
-        "id": "b6dFb_imq11x"
+        "id": "b6dFb_imq11x",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
