--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -51,135 +51,167 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ1.5.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
         "import shutil\n",
         "from IPython.utils import capture\n",
+        "from IPython.display import clear_output\n",
+        "import sys\n",
+        "import fileinput\n",
         "\n",
-        "Model_Base_15 = False #@param {type:\"boolean\"}\n",
-        "\n",
-        "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
+        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
+        "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
-        "\n",
+        "SDZconfig=\"--config v2-inference-v.yaml\"\n",
         "model_init = \"\" #@param {type:\"string\"}\n",
         "models_dir = \"\" #@param {type:\"string\"}\n",
+        "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
+        "SDZ_Dreambooth_Fix = False #@param {type:\"boolean\"}\n",
+        "SDZ_Big_Model_Fix = False #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "\n",
+        "if not SDZ_Continue: \n",
+        "  with capture.capture_output() as cap:\n",
         "\n",
-        "with capture.capture_output() as cap:\n",
-        "  if os.path.exists(SDZ):\n",
-        "    shutil.rmtree(SDZ)\n",
-        "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
-        "\n",
-        "  if not os.path.exists(SDZ):\n",
+        "    if os.path.exists(SDZ):\n",
+        "      shutil.rmtree(SDZ)\n",
         "    !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "\n",
-        "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
+        "    if not os.path.exists(SDZ):\n",
+        "      !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "\n",
-        "  if Model_Base_15:\n",
-        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\n",
+        "    %cd stable-diffusion-webui\n",
+        "    !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
+        "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
         "\n",
-        "  %cd ..\n",
-        "  %cd ..\n",
-        "  %cd stable-diffusion-webui\n",
+        "    if SDZ_Big_Model_Fix:\n",
+        "      !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "    else:\n",
+        "      !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "\n",
-        "  %pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+1515f77.d20221130-cp38-cp38-linux_x86_64.whl\n",
+        "    %cd models/Stable-diffusion\n",
         "\n",
-        "  # Install style - config\n",
-        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
-        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
-        "  \n",
-        "  # Install Extensions\n",
-        "  os.chdir(SDZ_webui_path)\n",
-        "  %cd extensions\n",
-        "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        " #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    if Download_Base_Model == \"V1.5\":\n",
+        "      !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
         "\n",
-        "  %cd ..\n",
-        "  %cd ..\n",
-        "  !mkdir repositories\n",
-        "  %cd repositories\n",
-        "  !mkdir midas\n",
-        "  %cd midas\n",
-        "  !git clone https://github.com/isl-org/MiDaS.git .\n",
+        "    elif Download_Base_Model == \"V2.1\":\n",
+        "      !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "     \n",
+        "    else:\n",
+        "      Download_Base_Model == \"\"\n",
+        "      os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "   \n",
+        "    %cd ..\n",
         "\n",
-        "  os.chdir(SDZ_install+\"/\"+SDZ)\n",
+        "    if SDZ_Dreambooth_Fix:\n",
+        "      os.chdir(SDZ_webui_path)\n",
+        "      !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "      with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
+        "        filedata = file.read()\n",
+        "        filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
+        "      with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
+        "        file.write(filedata)\n",
+        "    else:\n",
+        "      os.chdir(SDZ_webui_path)\n",
+        "      !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "\n",
-        "!python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark \n"
+        "    clear_output()\n",
+        "  print('\u001b[1;96mInstalling SDZ ✓')\n",
+        "\n",
+        "  with capture.capture_output() as cap:\n",
+        "    if SDZ_Dreambooth:\n",
+        "      if not os.path.exists('/usr/local/conda-meta/'):\n",
+        "        os.chdir(SDZ_webui_path)\n",
+        "        !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "        !bash ./py310.sh -b -f -p /usr/local\n",
+        "        !python -m ipykernel install --name \"py310\" --user\n",
+        "        !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "\n",
+        "      if os.path.exists('/usr/local/conda-meta/'):\n",
+        "        os.chdir(SDZ_webui_path)\n",
+        "        !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "        %cd extensions\n",
+        "        # Install Extensions \n",
+        "        !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "        %cd ..\n",
+        "        clear_output()\n",
+        "  print('\u001b[1;90mPreparing SDZ System ✓')\n",
+        "  if SDZ_Version == \"V1.5\":\n",
+        "    !python launch.py --share --api --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n",
+        "  elif SDZ_Version == \"V2.1\":\n",
+        "    !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n",
+        "\n",
+        "if SDZ_Continue:\n",
+        "  if not os.path.exists('/usr/local/conda-meta/'):\n",
+        "    with capture.capture_output() as cap:\n",
+        "        os.chdir(SDZ_webui_path)\n",
+        "        clear_output()\n",
+        "        print('\u001b[1;90mPreparing SDZ System Continue ✓')\n",
+        "\n",
+        "        if SDZ_Big_Model_Fix:\n",
+        "          !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "        else:\n",
+        "          !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "\n",
+        "        if SDZ_Dreambooth_Fix:\n",
+        "          os.chdir(SDZ_webui_path)          \n",
+        "          !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "          with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
+        "            filedata = file.read()\n",
+        "            filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
+        "          with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
+        "            file.write(filedata)\n",
+        "        else:\n",
+        "          os.chdir(SDZ_webui_path)\n",
+        "          !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "\n",
+        "        !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "        !bash ./py310.sh -b -f -p /usr/local\n",
+        "        !python -m ipykernel install --name \"py310\" --user\n",
+        "        !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "\n",
+        "        !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "\n",
+        "  if os.path.exists('/usr/local/conda-meta/'):\n",
+        "        os.chdir(SDZ_webui_path)\n",
+        "\n",
+        "        if SDZ_Big_Model_Fix:\n",
+        "          !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "        else:\n",
+        "          !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "\n",
+        "        if SDZ_Dreambooth_Fix:\n",
+        "          os.chdir(SDZ_webui_path)\n",
+        "          !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "          with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
+        "            filedata = file.read()\n",
+        "            filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
+        "          with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
+        "            file.write(filedata)\n",
+        "        else:\n",
+        "          os.chdir(SDZ_webui_path)\n",
+        "          !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "\n",
+        "          !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "\n",
+        "        clear_output()\n",
+        "        print('\u001b[1;90mPreparing SDZ System Continue ✓')\n",
+        "        if SDZ_Version == \"V1.5\":\n",
+        "          !python launch.py --share --api --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n",
+        "        elif SDZ_Version == \"V2.1\":\n",
+        "          !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "Uo8Rjru04K6a"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.1.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
-        "import os\n",
-        "import shutil\n",
-        "from IPython.utils import capture\n",
-        "\n",
-        "Model_Base_21 = False #@param {type:\"boolean\"}\n",
-        "\n",
-        "SDZ = \"stable-diffusion-webui\"\n",
-        "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
-        "gitclo = \"git clone --depth 1\" \n",
-        "os.chdir(SDZ_install)\n",
-        "\n",
-        "model_init = \"\" #@param {type:\"string\"}\n",
-        "models_dir = \"\" #@param {type:\"string\"}\n",
-        "\n",
-        "with capture.capture_output() as cap:\n",
-        "  if os.path.exists(SDZ):\n",
-        "    shutil.rmtree(SDZ)\n",
-        "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
-        "\n",
-        "  if not os.path.exists(SDZ):\n",
-        "    !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
-        "\n",
-        "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
-        "\n",
-        "  if Model_Base_21:\n",
-        "    !wget https://huggingface.co/stabilityai/stable-diffusion-2/resolve/main/Zv2-1_768-fp16.ckpt\n",
-        "\n",
-        "  %cd ..\n",
-        "  %cd ..\n",
-        "  %cd stable-diffusion-webui\n",
-        "\n",
-        "  %pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+1515f77.d20221130-cp38-cp38-linux_x86_64.whl\n",
-        "\n",
-        "  # Install style - config\n",
-        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
-        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
-        "  !wget https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "  \n",
-        "  # Install Extensions\n",
-        "  os.chdir(SDZ_webui_path)\n",
-        "  %cd extensions\n",
-        "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        " #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
-        "\n",
-        "  %cd ..\n",
-        "  %cd ..\n",
-        "  !mkdir repositories\n",
-        "  %cd repositories\n",
-        "  !mkdir midas\n",
-        "  %cd midas\n",
-        "  !git clone https://github.com/isl-org/MiDaS.git .\n",
-        "\n",
-        "  os.chdir(SDZ_install+\"/\"+SDZ)\n",
-        "\n",
-        "!python launch.py --share --api --config=v2-inference-v.yaml  --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark \n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "8T3cOCDr4HWl"
+        "id": "uzksUSareb5K"
       },
       "execution_count": null,
       "outputs": []
