--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -88,122 +88,75 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
         "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
-        "  \n",
-        "    %cd models/Stable-diffusion\n",
         "\n",
-        "    if Download_Base_Model == \"V1.5\":\n",
-        "      !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
-        "\n",
-        "    elif Download_Base_Model == \"V2.1\":\n",
-        "      !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
-        "     \n",
-        "    else:\n",
-        "      Download_Base_Model == \"\"\n",
-        "      os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "   \n",
         "    %cd ..\n",
-        "\n",
-        "    if SDZ_Dreambooth_Fix:\n",
-        "      os.chdir(SDZ_webui_path)\n",
-        "      !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "      with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
-        "        filedata = file.read()\n",
-        "        filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
-        "      with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
-        "        file.write(filedata)\n",
-        "    else:\n",
-        "      os.chdir(SDZ_webui_path)\n",
-        "      !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "\n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
-        "  with capture.capture_output() as cap:\n",
-        "    if SDZ_Dreambooth:\n",
-        "      if not os.path.exists('/usr/local/conda-meta/'):\n",
-        "        os.chdir(SDZ_webui_path)\n",
-        "        !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
-        "        !bash ./py310.sh -b -f -p /usr/local\n",
-        "        !python -m ipykernel install --name \"py310\" --user\n",
-        "        !conda install -c \"xformers/label/dev\" xformers -y\n",
-        "\n",
-        "      if os.path.exists('/usr/local/conda-meta/'):\n",
-        "        os.chdir(SDZ_webui_path)\n",
-        "        !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
-        "        %cd extensions\n",
-        "        # Install Extensions \n",
-        "        !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
-        "        %cd ..\n",
-        "        clear_output()\n",
-        "  print('\u001b[1;90mPreparing SDZ System ✓')\n",
-        "\n",
-        "  if SDZ_Big_Model_Fix:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "  else:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        " \n",
-        "  if SDZ_Version == \"V1.5\":\n",
-        "    !python launch.py --share --api --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n",
-        "  elif SDZ_Version == \"V2.1\":\n",
-        "    !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n",
-        "\n",
         "if SDZ_Continue:\n",
-        "  if not os.path.exists('/usr/local/conda-meta/'):\n",
-        "    with capture.capture_output() as cap:\n",
-        "        os.chdir(SDZ_webui_path)\n",
-        "        clear_output()\n",
-        "        print('\u001b[1;90mPreparing SDZ System Continue ✓')\n",
+        "  with capture.capture_output() as cap:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    clear_output()\n",
+        "  print('\u001b[1;90mPreparing SDZ Continue ✓')\n",
         "\n",
-        "        if SDZ_Dreambooth_Fix:\n",
-        "          os.chdir(SDZ_webui_path)          \n",
-        "          !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "          with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
-        "            filedata = file.read()\n",
-        "            filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
-        "          with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
-        "            file.write(filedata)\n",
-        "        else:\n",
-        "          os.chdir(SDZ_webui_path)\n",
-        "          !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "with capture.capture_output() as cap:\n",
+        "  os.chdir(SDZ_webui_path)\n",
         "\n",
-        "        !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
-        "        !bash ./py310.sh -b -f -p /usr/local\n",
-        "        !python -m ipykernel install --name \"py310\" --user\n",
-        "        !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "  %cd models/Stable-diffusion\n",
         "\n",
-        "        !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "  if Download_Base_Model == \"V1.5\":\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    \n",
+        "  elif Download_Base_Model == \"V2.1\":\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "    os.chdir(SDZ_webui_path)\n",
         "\n",
-        "  if os.path.exists('/usr/local/conda-meta/'):\n",
-        "        os.chdir(SDZ_webui_path)\n",
+        "  else:\n",
+        "    Download_Base_Model == \"\"\n",
+        "    os.chdir(SDZ_webui_path)\n",
         "\n",
-        "        if SDZ_Dreambooth_Fix:\n",
-        "          os.chdir(SDZ_webui_path)\n",
-        "          !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "          with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
-        "            filedata = file.read()\n",
-        "            filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
-        "          with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
-        "            file.write(filedata)\n",
-        "        else:\n",
-        "          os.chdir(SDZ_webui_path)\n",
-        "          !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "  %cd extensions\n",
+        "  \n",
+        "  if SDZ_Dreambooth:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "    !bash ./py310.sh -b -f -p /usr/local\n",
+        "    !python -m ipykernel install --name \"py310\" --user\n",
+        "    !conda install -c \"xformers/label/dev\" xformers -y\n",
         "\n",
-        "          !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    %cd ..\n",
         "\n",
-        "          clear_output()\n",
-        "  print('\u001b[1;90mPreparing SDZ System Continue ✓')\n",
-        "\n",
+        "  if SDZ_Dreambooth_Fix:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "    with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
+        "      filedata = file.read()\n",
+        "      filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
+        "    with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
+        "      file.write(filedata)\n",
+        "  else:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "      \n",
         "  if SDZ_Big_Model_Fix:\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "  else:\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "    \n",
+        "    clear_output()\n",
+        "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
-        "  if SDZ_Version == \"V1.5\":\n",
-        "    !python launch.py --share --api --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n",
-        "  elif SDZ_Version == \"V2.1\":\n",
-        "    !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n"
+        "if SDZ_Version == \"V1.5\":\n",
+        "  !python launch.py --share --api --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n",
+        "elif SDZ_Version == \"V2.1\":\n",
+        "  !python launch.py --share --api $SDZconfig --cors-allow-origins=https://www.painthua.com --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --theme=dark --disable-safe-unpickle --no-half-vae\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -216,8 +169,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
