--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -126,6 +126,7 @@
         "    !bash ./py310.sh -b -f -p /usr/local\n",
         "    !python -m ipykernel install --name \"py310\" --user\n",
         "    !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "    !pip install triton\n",
         "\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
