--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -92,9 +92,6 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
         "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
         "\n",
-        "    %cd extensions\n",
-        "    #!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "    %cd ..\n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
@@ -125,7 +122,8 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  %cd extensions\n",
-        "  \n",
+        "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "\n",
         "  if SDZ_Dreambooth:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
