--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -122,8 +122,8 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  %cd extensions\n",
-        "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "\n",
+        "  #!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "  \n",
         "  if SDZ_Dreambooth:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
