--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -11,28 +11,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
-        "import os\n",
-        "from IPython.display import clear_output\n",
-        "\n",
-        "save_models_dir = \"/content/sample_data\"#@param {type:\"string\"}\n",
-        "os.chdir(save_models_dir)\n",
-        "url = \"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "!wget --no-check-certificate $url\n",
-        "\n",
-        "clear_output()\n",
-        "print('\u001b[1;32mModel Save ✓')"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "5hbzyH9QMgR7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Y9EBc437WDOs",
@@ -60,7 +38,7 @@
         "import fileinput\n",
         "\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
+        "SDZ_Version = \"V2.1\" #@param [\"V1.5\", \"V2.1\"]\n",
         "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
@@ -74,9 +52,8 @@
         "SDZ_Dreambooth_Fix = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Model_Fix = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
-        "\n",
-        "SDZconfig=\"--config v2-inference-v.yaml\"\n",
-        "share = \"--share --api --cors-allow-origins=https://www.painthua.com --force-enable-xformers --theme=dark --disable-safe-unpickle --no-half-vae\" + \" --ckpt=\" + model_init + \" --ckpt-dir=\" + models_dir + \" \" + SDZ_Args\n",
+        "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
+        "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --no-half-vae\" + \" --ckpt=\" + model_init + \" --ckpt-dir=\" + models_dir + \" \" + SDZ_Args\n",
         "\n",
         "if not SDZ_Continue: \n",
         "  with capture.capture_output() as cap:\n",
@@ -90,7 +67,6 @@
         "    %cd stable-diffusion-webui\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
-        "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
         "\n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
@@ -105,9 +81,12 @@
         "  os.chdir(SDZ_webui_path)\n",
         "\n",
         "  %cd models/Stable-diffusion\n",
+        "  ############# Requirements SDZ\n",
         "  !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
-        "  #!pip install triton==2.0.0.dev20221120\n",
-        "  #!pip install triton\n",
+        "  !pip install open-clip-torch\n",
+        "  #/usr/local/lib/python3.8/dist-packages/open_clip\n",
+        "\n",
+        "\n",
         "\n",
         "  if Download_Base_Model == \"V1.5\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
@@ -123,18 +102,21 @@
         "\n",
         "  %cd extensions\n",
         "  #!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "  \n",
+        "\n",
         "  if SDZ_Dreambooth:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
         "    !bash ./py310.sh -b -f -p /usr/local\n",
         "    !python -m ipykernel install --name \"py310\" --user\n",
         "    !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "    !pip install open-clip-torch\n",
+        "    !pip install triton\n",
         "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "#/usr/local/lib/python3.10/site-packages/open_clip\n",
         "\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
-        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Dreambooth_Fix:\n",
@@ -158,13 +140,39 @@
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
         "if SDZ_Version == \"V1.5\":\n",
+        "  !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cpu\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
         "  !python launch.py $share\n",
         "elif SDZ_Version == \"V2.1\":\n",
-        "  !python launch.py $share $SDZconfig\n"
+        "  !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
+        "  #!sed -i 's@\"multiple_tqdm\": true,@\\\"multiple_tqdm\": false,@' $SDZ_webui_path'/config.json'\n",
+        "  #!sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
+        "  !python launch.py $share $SDZconfigV2\n"
       ],
       "metadata": {
         "cellView": "form",
         "id": "uzksUSareb5K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "import os\n",
+        "from IPython.display import clear_output\n",
+        "\n",
+        "save_models_dir = \"/content/sample_data\"#@param {type:\"string\"}\n",
+        "os.chdir(save_models_dir)\n",
+        "url = \"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "!wget --no-check-certificate $url\n",
+        "\n",
+        "clear_output()\n",
+        "print('\u001b[1;32mModel Save ✓')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "5hbzyH9QMgR7"
       },
       "execution_count": null,
       "outputs": []
