--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -38,7 +38,7 @@
         "import fileinput\n",
         "\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "SDZ_Version = \"V2.1\" #@param [\"V1.5\", \"V2.1\"]\n",
+        "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
         "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
@@ -82,11 +82,9 @@
         "\n",
         "  %cd models/Stable-diffusion\n",
         "  ############# Requirements SDZ\n",
-        "  !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
-        "  !pip install open-clip-torch\n",
-        "  #/usr/local/lib/python3.8/dist-packages/open_clip\n",
-        "\n",
-        "\n",
+        "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
+        "    !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
+        "    !pip install open-clip-torch\n",
         "\n",
         "  if Download_Base_Model == \"V1.5\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
@@ -105,14 +103,14 @@
         "\n",
         "  if SDZ_Dreambooth:\n",
         "    os.chdir(SDZ_webui_path)\n",
-        "    !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
-        "    !bash ./py310.sh -b -f -p /usr/local\n",
-        "    !python -m ipykernel install --name \"py310\" --user\n",
-        "    !conda install -c \"xformers/label/dev\" xformers -y\n",
-        "    !pip install open-clip-torch\n",
-        "    !pip install triton\n",
-        "    !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
-        "#/usr/local/lib/python3.10/site-packages/open_clip\n",
+        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "      !bash ./py310.sh -b -f -p /usr/local\n",
+        "      !python -m ipykernel install --name \"py310\" --user\n",
+        "      !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "      !pip install open-clip-torch\n",
+        "      !pip install triton\n",
+        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
         "\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
